tests/ui/coherence/coherence-inherited-assoc-ty-cycle-err.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/coherence-inherited-assoc-ty-cycle-err.rs:6:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0391]: cycle detected when building specialization graph of trait `Trait`
  --> $DIR/coherence-inherited-assoc-ty-cycle-err.rs:9:1
   |
LL | trait Trait<T> { type Assoc; }
   | ^^^^^^^^^^^^^^
   |
   = note: ...which immediately requires building specialization graph of trait `Trait` again
note: cycle used when coherence checking all impls of trait `Trait`
  --> $DIR/coherence-inherited-assoc-ty-cycle-err.rs:9:1
   |
LL | trait Trait<T> { type Assoc; }
   | ^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0391`.
